# lang_learner

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  test_data.json
app/: urls.py
app/api/: urls.py
app/api/v1/: token.py  urls.py
app/apps/account/: admin.py  models.py
app/apps/account/migrations/: 0001_initial.py  0002_alter_user_email.py
app/apps/achievements/: admin.py  apps.py  models.py
app/apps/achievements/migrations/: 0001_initial.py  0002_alter_attempt_date.py
app/apps/dictionary/: admin.py  models.py
app/apps/dictionary/migrations/: 0001_initial.py  0002_language_icon.py  0003_dictionary_pinned_alter_rate_unique_together.py  0004_words.py  0005_dictionary_is_active.py  0006_alter_words_example_1_alter_words_example_2_and_more.py  0007_alter_words_example_1_alter_words_example_2_and_more.py  0008_words_session_count.py  0009_remove_words_session_count_dictionary_session_count.py  0010_alter_dictionary_session_count.py  0011_alter_dictionary_session_count.py  0012_learningmode_dictionary_learning_mods.py  0013_alter_learningmode_code.py  0014_words_transcription.py  0015_words_prononsiation.py
app/apps/web/: forms.py  serializers.py  urls.py  views.py
app/apps/web/templates/: 404.html  base.html
app/services/: learning_mode.py
app/settings/: base.py  common.py  production.py
app/settings/inc_django/: applications.py  auth.py  cache.py  db.py  i18n.py  logging.py  media.py  middleware.py  static.py  templates.py
app/settings/inc_other/: learner.py
docker/: .dockerenv.example
(+34 files in other folders)
